--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="Verdadero">Verdadero</string>
     <string name="Falso">Falso</string>
     <string name="tiempo_restante">Tiempo Restante</string>
-
+    <string name="HintCodigo">Ingrese El Codigo de Guia</string>
 </resources>
