--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
 Para ingresar, mañana les daremos los códigos especiales de guías
 
 ¡ Muchas Gracias por elegirnos !</string>
-    <string name="HintCodigo">Ingrese El Codigo de Guia</string>
+    <string name="HintCodigo">Ingrese El Código de Guía</string>
 </resources>
 
 
